   extremely large documents.

 * Refactored the Cleaner to traverse rather than recurse child nodes, to avoid the risk of overflowing the stack.
   <https://github.com/jhy/jsoup/issues/246>

 * Added Element.insertChildren(), to easily insert a list of child nodes at a specific index.
   <https://github.com/jhy/jsoup/issues/239>

 * When parsing in XML mode, preserve XML declarations (<?xml ... ?>).
   <https://github.com/jhy/jsoup/issues/242>

 * Allow Whitelist test methods to be extended
   <https://github.com/jhy/jsoup/issues/85>

 * Fixed an issue when parsing <textarea>/RCData tags containing unescaped closing tags that would drop the traling >.

 * Corrected the javadoc for Element#child() to note that it throws IndexOutOfBounds.
   <https://github.com/jhy/jsoup/issues/277>

*** Release 1.7.1 [2012-Sep-23]
 * Improved parse time, now 2.3x faster than previous release, with lower memory consumption.

 * Reduced memory consumption when selecting elements.

 * Introduced finer granularity of exceptions in Jsoup.connect, including HttpStatusException and
   UnsupportedMimeTypeException.
   <https://github.com/jhy/jsoup/issues/229>

 * Fixed an issue when determining the Windows-1254 character-set from a meta tag when run in the Turkish locale.
   <https://github.com/jhy/jsoup/issues/191>

 * Fixed whitespace preservation in <textarea> tags.
   <https://github.com/jhy/jsoup/issues/167>

 * In jsoup.connect, fail faster if the return content type is not supported.
   <https://github.com/jhy/jsoup/issues/153>

 * In jsoup.clean, allow custom OutputSettings, to control pretty printing, character set, and entity escaping.
   <https://github.com/jhy/jsoup/issues/148>

 * Fixed an issue that prevented frameset documents to be cleaned by the Cleaner.
   <https://github.com/jhy/jsoup/issues/154>

 * Fixed an issue when normalising whitespace for strings containing high-surrogate characters.
   <https://github.com/jhy/jsoup/issues/214>
